--- a/style/style.css
+++ b/style/style.css
@@ -86,5 +86,6 @@ body{
      linear-gradient(#fff 0 0) content-box, 
      linear-gradient(#fff 0 0);
   -webkit-mask-composite: xor;
-          mask-composite: exclude; 
+          mask-composite: exclude;
+  z-index:-1;
 }
